--- a/leaderboard.html
+++ b/leaderboard.html
@@ -11,5 +11,12 @@
     {{#each player}}
         <li class="player {{selectedClass}}">{{name}}: {{score}}</li>
     {{/each}}
+    {{#if selectedPlayer}}
+        <li>Selected Player: {{selectedPlayer.name}}</li>
+        <li>
+            <button class="increment">Give 5 Points</button>
+            <button class="decrement">Take 5 Points</button>
+        </li>
+    {{/if}}
 </ul>
 </template>
