--- a/leaderboard.html
+++ b/leaderboard.html
@@ -7,6 +7,7 @@
 </body>
 
 <template name="leaderboard">
+{{> addPlayerForm}}
 <ul>
     {{#each player}}
         <li class="player {{selectedClass}}">{{name}}: {{score}}</li>
@@ -16,7 +17,15 @@
         <li>
             <button class="increment">Give 5 Points</button>
             <button class="decrement">Take 5 Points</button>
+            <button class="remove">Remove Player</button>
         </li>
     {{/if}}
 </ul>
+</template>
+
+<template name="addPlayerForm">
+    <form>
+        <input type="text" name="playerName">
+        <input type="submit" value="Add Player">
+    </form>
 </template>
